examples/bad/parse-fail.elina
fn main(): void {
  if (true)
    return;
}